# xdpstats-rs

./: Cargo.toml  README.md  README_AYA.md  install_to_path.sh
.github/workflows/: build.yml  run.yml
xdpstats/: Cargo.toml  build.rs
xdpstats-common/: Cargo.toml
xdpstats-common/src/: config.rs  lib.rs  stats.rs
xdpstats-common/src/util/: net.rs
xdpstats-ebpf/: Cargo.toml
xdpstats-ebpf/src/: ctx.rs  fib.rs  main.rs  protocol.rs  stats.rs  tx.rs  util.rs  utils.rs
xdpstats-ebpf/src/util/: csum.rs
xdpstats/src/: afxdp.rs  cli.rs  context.rs  logger.rs  main.rs  util.rs  watcher.rs  xdp.rs
xdpstats/src/afxdp/: init.rs  opt.rs  packet.rs  socket.rs  stats.rs  thread.rs
xdpstats/src/cli/: arg.rs  list.rs
xdpstats/src/logger/: base.rs  level.rs  log.rs  macros.rs
xdpstats/src/util/: format.rs  rlimit.rs
xdpstats/src/watcher/: base.rs  interface.rs  run.rs
xdpstats/src/xdp/: attach.rs  base.rs  load.rs  stats.rs
