[package]
name = "xdpstats"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
xdpstats-common = { path = "../xdpstats-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
clap = { workspace = true, features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
xsk-rs = "0.8.0"
pnet = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
xdpstats-ebpf = { path = "../xdpstats-ebpf" }
xsk-rs = { version = "0.8.0", optional = true }

[[bin]]
name = "xdpstats"
path = "src/main.rs"

[features]
default = []
afxdp = ["dep:xsk-rs"]
tx = []
tx_fib = []

